# docs-localization-test

./: .readthedocs.yaml  README.rst  pyproject.toml  readme.md
.github/workflows/: docs.yml
docs/: conf.py  index.rst
docs/configs/: mkdocs-en.yml  mkdocs-ru.yml
docs/docs/en/: index.md
docs/docs/ru/: index.md
docs/source/: conf.py  index.rst
en/: 404.html  index.html  search.html
en/search/: search_index.json
ru/: 404.html  index.html  search.html
ru/search/: search_index.json
