[tool.poetry]
name = "sphinx-localization-test"
version = "0.1.0"
description = ""
authors = ["jieggii <jieggii@protonmail.com>"]
readme = "README.md"
packages = [{include = "sphinx_localization_test"}]

[tool.poetry.dependencies]
python = "^3.11"
furo = "^2023.7.26"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
