[tool.poetry]
name = "docs-localization-test"
version = "0.1.0"
description = ""
authors = ["jieggii <jieggii@protonmail.com>"]
readme = "README.md"
#packages = [{include = "docs_local"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
